--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/login.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    {% load static %}  <!-- Add this line to load the static template tag -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
