--- a/django_blog/blog/static/blog/style.css
+++ b/django_blog/blog/static/blog/style.css
@@ -3,3 +3,10 @@ body {
     margin: 0;
     padding: 20px;
 }
+.container {
+    max-width: 800px;
+    margin: auto;
+}
+.form-group {
+    margin-bottom: 15px;
+}
