--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -9,5 +9,26 @@
     <a href="{% url 'post_update' post.pk %}">Edit</a>
     <a href="{% url 'post_delete' post.pk %}">Delete</a>
     {% endif %}
+    <h3>Comments</h3>
+    {% for comment in post.comments.all %}
+    <div class="comment">
+        <p>{{ comment.content }}</p>
+        <p>By {{ comment.author }} on {{ comment.created_at }}</p>
+        {% if user == comment.author %}
+        <a href="{% url 'comment_update' comment.pk %}">Edit</a>
+        <a href="{% url 'comment_delete' comment.pk %}">Delete</a>
+        {% endif %}
+    </div>
+    {% empty %}
+    <p>No comments yet.</p>
+    {% endfor %}
+    {% if user.is_authenticated %}
+    <h3>Add Comment</h3>
+    <form method="post" action="{% url 'comment_create' post.pk %}">
+        {% csrf_token %}
+        {{ comment_form.as_p }}
+        <button type="submit">Submit Comment</button>
+    </form>
+    {% endif %}
 </div>
 {% endblock %}
