--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -5,6 +5,9 @@
     <h2>{{ post.title }}</h2>
     <p>{{ post.content }}</p>
     <p>By {{ post.author }} on {{ post.published_date }}</p>
+    <p>Tags: {% for tag in post.tags.all %}
+        <a href="{% url 'tag_list' tag.slug %}">{{ tag.name }}</a>
+        {% endfor %}</p>
     {% if user == post.author %}
     <a href="{% url 'post_update' post.pk %}">Edit</a>
     <a href="{% url 'post_delete' post.pk %}">Delete</a>
